[project]
name = "jaffle_platform"
requires-python = ">=3.9,<3.13"
version = "0.1.0"
dependencies = [
    "dagster",
    "dagster-dbt>=0.26.11",
    "dagster-sling>=0.26.11",
    "dbt-duckdb>=1.9.2",
]

[project.entry-points]
"dagster_dg.plugin" = { jaffle_platform = "jaffle_platform.lib"}

[dependency-groups]
dev = [
    "dagster-webserver",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "jaffle_platform"


[tool.dg.project.python_environment]
active = true
